--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.0",
-    "@angular/cdk": "^15.2.8",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
@@ -38,7 +36,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.4",
-    "@angular/cli": "~15.1.4",
+    "@angular/cli": "^16.1.1",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
     "@types/jsonwebtoken": "^9.0.1",
