--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-validator": "^0.14.0",
     "jquery": "^3.7.0",
     "jsonwebtoken": "^9.0.0",
+    "ngx-youtube-player": "^12.0.2",
     "nodemailer": "^6.9.3",
     "rxjs": "~7.8.0",
     "summernote": "^0.8.20",
