--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,8 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "node_modules/summernote/dist/summernote-bs4.css"
+              "node_modules/summernote/dist/summernote-bs4.css",
+              "node_modules/angular-calendar/css/angular-calendar.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
