--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@types/jquery": "^3.5.16",
     "@types/summernote": "^0.8.7",
+    "angular-calendar": "^0.31.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "class-validator": "^0.14.0",
+    "date-fns": "^2.29.3",
     "jquery": "^3.7.0",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.3",
