--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^15.1.0",
-    "@angular/compiler": "^15.1.0",
-    "@angular/core": "^15.1.0",
-    "@angular/forms": "^15.1.0",
-    "@angular/platform-browser": "^15.2.8",
-    "@angular/platform-browser-dynamic": "^15.1.0",
-    "@angular/router": "^15.1.0",
+    "@angular/common": "^16.2.9",
+    "@angular/compiler": "^16.2.9",
+    "@angular/core": "^16.2.9",
+    "@angular/forms": "^16.2.9",
+    "@angular/platform-browser": "^16.2.9",
+    "@angular/platform-browser-dynamic": "^16.2.9",
+    "@angular/router": "^16.2.9",
     "@auth0/angular-jwt": "^5.1.2",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@types/jquery": "^3.5.16",
@@ -34,16 +34,17 @@
     "summernote": "^0.8.20",
     "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.4",
-    "@angular/cli": "^16.1.1",
-    "@angular/compiler-cli": "^15.1.0",
+    "@angular-devkit/build-angular": "^16.2.16",
+    "@angular/cli": "^16.2.9",
+    "@angular/compiler-cli": "^16.2.9",
     "@types/jasmine": "~4.3.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.8",
+    "husky": "^9.1.7",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
