--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^18.2.13",
     "@auth0/angular-jwt": "^5.1.2",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
+    "@popperjs/core": "^2.11.8",
     "@types/jquery": "^3.5.16",
     "@types/summernote": "^0.8.7",
     "angular-calendar": "^0.31.1",
@@ -41,6 +43,7 @@
     "@angular-devkit/build-angular": "^18.2.18",
     "@angular/cli": "^18.2.18",
     "@angular/compiler-cli": "^18.2.13",
+    "@angular/localize": "^18.2.13",
     "@types/jasmine": "~4.3.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^20.3.1",
